--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hugo-paiva-cw.github.io/dapp",
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "gh-pages": "^4.0.0",
     "hardhat": "^2.10.2"
   }
 }
